--- a/processing/polygons/CMakeLists.txt
+++ b/processing/polygons/CMakeLists.txt
@@ -1,3 +1,5 @@
 project(Polygons)
 add_library(Polygons polygons.cpp simplify.cpp)
 target_link_libraries(Polygons INTERFACE ${OpenCV_LIBS}  Points)
+
+target_include_directories(Polygons PUBLIC "${PROJECT_SOURCE_DIR}/processing/points")
