--- a/processing/CMakeLists.txt
+++ b/processing/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(contrib)
 add_subdirectory(pixels)
 add_subdirectory(points)
 add_subdirectory(polygons)
+add_subdirectory(morphologicals)
