--- a/showroom/CMakeLists.txt
+++ b/showroom/CMakeLists.txt
@@ -1,3 +1,8 @@
 project (showroom)
-add_executable(showroom main.cpp)
-target_link_libraries( showroom PRIVATE ${OpenCV_LIBS} Contrib Pixels Polygons)
+add_executable(showroom debug.cpp)
+target_link_libraries( showroom PRIVATE ${OpenCV_LIBS} Contrib Pixels Polygons Morphologicals)
+
+
+project (hotspot)
+add_executable(hotspot main.cpp)
+target_link_libraries( hotspot PRIVATE ${OpenCV_LIBS} Contrib Pixels Polygons Morphologicals)
