--- a/backend/CMakeLists.txt
+++ b/backend/CMakeLists.txt
@@ -2,6 +2,6 @@ set(BACKEND_SOURCES
         renderer.cpp
         renderer.h
         )
-
+set(BACKEND_LIBS Filler)
 add_subdirectory(Shared)
 add_subdirectory(Static)
