--- a/backend/Static/CMakeLists.txt
+++ b/backend/Static/CMakeLists.txt
@@ -22,6 +22,7 @@ target_link_libraries(BackendStatic PRIVATE
         Qt${QT_VERSION_MAJOR}::Quick
         Qt${QT_VERSION_MAJOR}::Qml
         ${OpenCV_LIBS}
+        ${BACKEND_LIBS}
         )
 
 target_include_directories(BackendStatic PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
