--- a/processing/CMakeLists.txt
+++ b/processing/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory(pixels)
 add_subdirectory(points)
 add_subdirectory(polygons)
 add_subdirectory(morphologicals)
+add_subdirectory(filler)
